<resources>
    <string name="app_name">Tasks Util</string>
    <!-- Strings related to welcome -->
    <string name="welcome_note">Hello! welcome</string>
    <string name="developer">by Sarbesh Sarkar</string>
    <string name="design_dev">designed and developed in</string>
    <string name="ind">India</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="asset_statements" translatable="false">[{ \"include\": \"https://sarbesh.pythonanywhere.com/static/.well-known/assetlinks.json\" }]</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="attempts">Number of attempts remaining: {}</string>
</resources>